--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ line-height: 1.4;
 <body>
 <section class='container'>
           <hgroup>
-            <h1>Welcome to your Node.js application on OpenShift</h1>
+            <h1>Welcome to CS 4550</h1>
           </hgroup>
 
 
