--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -66,60 +66,53 @@
             <form class="form-fields">
                 <div class="fields-group">
                     <div class="form-group">
-                        <label for="exampleInputEmail1">First Name</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="First Name">
+                        <label for="">First Name</label>
+                        <input type="text" class="form-control" id="" placeholder="First Name">
                     </div>
                     <div class="action-links">
-                        <span class="glyphicon glyphicon-pencil"></span>
-                        <span class="glyphicon glyphicon-plus"></span>
-                        <span class="glyphicon glyphicon-remove"></span>
-                        <span class="glyphicon glyphicon-align-justify"></span>
+                        <a href="#"><span class="glyphicon glyphicon-pencil"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-plus"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-align-justify"></span></a>
                     </div>
                 </div>
                 <div class="fields-group">
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Last Name</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Last Name">
+                        <label for="">Last Name</label>
+                        <input type="text" class="form-control" id="" placeholder="Last Name">
                     </div>
                     <div class="action-links">
-                        <span class="glyphicon glyphicon-pencil"></span>
-                        <span class="glyphicon glyphicon-plus"></span>
-                        <span class="glyphicon glyphicon-remove"></span>
-                        <span class="glyphicon glyphicon-align-justify"></span>
+                        <a href="#"><span class="glyphicon glyphicon-pencil"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-plus"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-align-justify"></span></a>
                     </div>
                 </div>
                 <div class="fields-group">
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Date of Birth</label>
-                        <select class="form-control">
-                            <option>Select Date</option>
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
-                        </select>
+                        <label for="">Date of Birth</label>
+                        <input type="date" class="form-control" id="" placeholder="Select Date">
                     </div>
                     <div class="action-links">
-                        <span class="glyphicon glyphicon-pencil"></span>
-                        <span class="glyphicon glyphicon-plus"></span>
-                        <span class="glyphicon glyphicon-remove"></span>
-                        <span class="glyphicon glyphicon-align-justify"></span>
+                        <a href="#"><span class="glyphicon glyphicon-pencil"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-plus"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-align-justify"></span></a>
                     </div>
                 </div>
                 <div class="fields-group">
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Gender</label>
+                        <label for="">Gender</label>
                         <select class="form-control">
                             <option>Male</option>
                             <option>Female</option>
                         </select>
                     </div>
                     <div class="action-links">
-                        <span class="glyphicon glyphicon-pencil"></span>
-                        <span class="glyphicon glyphicon-plus"></span>
-                        <span class="glyphicon glyphicon-remove"></span>
-                        <span class="glyphicon glyphicon-align-justify"></span>
+                        <a href="#"><span class="glyphicon glyphicon-pencil"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-plus"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-align-justify"></span></a>
                     </div>
                 </div>
 
@@ -148,13 +141,13 @@
                 <label for="" class="marginTop20">License Agreement</label>
                 <div class="radio">
                     <label>
-                        <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+                        <input type="radio" name="optionsRadios" id="" value="option1" checked>
                         Yes
                     </label>
                 </div>
                 <div class="radio">
                     <label>
-                        <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+                        <input type="radio" name="optionsRadios" id="" value="option2">
                         No
                     </label>
                 </div>
@@ -162,7 +155,7 @@
 
                 <div class="fields-group">
                     <div class="form-group">
-                        <label for="exampleInputPassword1" class="marginTop20">Add New Field:</label>
+                        <label for="" class="marginTop20">Add New Field:</label>
                         <select class="form-control">
                             <option>Single Line Text</option>
                             <option>Date</option>
@@ -170,11 +163,10 @@
                             <option>Checkboxes</option>
                             <option>Radio Buttons</option>
                             <option>Paragraph Text Field</option>
-
                         </select>
                     </div>
                     <div class="action-links">
-                        <span class="glyphicon glyphicon-plus"></span>
+                        <a href="#"><span class="glyphicon glyphicon-plus"></span></a>
                     </div>
                 </div>
                 <!--<button type="submit" class="btn btn-default">Submit</button>-->
