--- a/public/assignment/forms.html
+++ b/public/assignment/forms.html
@@ -74,29 +74,29 @@
                 <tr>
                     <td><input type="text" class="form-control" placeholder="Name"></td>
                     <td>
-                        <span class="glyphicon glyphicon-plus"></span>
-                        <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+                        <a href="#"><span class="glyphicon glyphicon-plus"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a>
                     </td>
                 </tr>
                 <tr>
                     <td>Registration Form</td>
                     <td>
-                        <span class="glyphicon glyphicon-remove"></span>
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
                     </td>
                 </tr>
                 <tr>
                     <td>Contact List</td>
                     <td>
-                        <span class="glyphicon glyphicon-remove"></span>
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
                     </td>
                 </tr>
                 <tr>
                     <td>To Do List</td>
                     <td>
-                        <span class="glyphicon glyphicon-remove"></span>
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
                     </td>
                 </tr>
                 </tbody>
