--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -61,39 +61,39 @@
             <h1>Profile</h1>
             <form class="form-horizontal">
                 <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
+                    <label for="" class="col-sm-2 control-label">Username:</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Username">
+                        <input type="text" class="form-control" id="" placeholder="Username">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                    <label for="" class="col-sm-2 control-label">Password:</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                        <input type="password" class="form-control" id="" placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-2 control-label">First Name</label>
+                    <label for="" class="col-sm-2 control-label">First Name:</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="First Name">
+                        <input type="text" class="form-control" id="" placeholder="First Name">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-2 control-label">Last Name</label>
+                    <label for="" class="col-sm-2 control-label">Last Name:</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="Last Name">
+                        <input type="text" class="form-control" id="" placeholder="Last Name">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+                    <label for="" class="col-sm-2 control-label">Email:</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                        <input type="email" class="form-control" id="" placeholder="Email">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default">Update</button>
+                        <button type="submit" class="btn btn-default btn-lg">Update</button>
                     </div>
                 </div>
             </form>
