--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -35,14 +35,11 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="register.html">Register</a></li>
+                <li class="active"><a href="register.html">Register</a></li>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="#">Username</a></li>
                 <li><a href="#">Logout</a></li>
             </ul>
-            <!--<form class="navbar-form navbar-right">-->
-            <!--<input type="text" class="form-control" placeholder="Search...">-->
-            <!--</form>-->
         </div>
     </div>
 </nav>
@@ -51,7 +48,7 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li class="active"><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="profile.html">Profile</a></li>
                 <li><a href="admin.html">Admin</a></li>
                 <li><a href="forms.html">Forms</a></li>
@@ -61,41 +58,32 @@
             <h1>Register</h1>
             <form class="form-horizontal">
                 <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-2 control-label">Username:</label>
+                    <label for="" class="col-sm-2 control-label">Username:</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Username">
+                        <input type="text" class="form-control" id="" placeholder="Username">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-2 control-label">Password:</label>
+                    <label for="" class="col-sm-2 control-label">Password:</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                        <input type="password" class="form-control" id="" placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-2 control-label">Verify Password:</label>
+                    <label for="" class="col-sm-2 control-label">Verify Password:</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Verify Password">
+                        <input type="password" class="form-control" id="" placeholder="Verify Password">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-2 control-label">Email:</label>
+                    <label for="" class="col-sm-2 control-label">Email:</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="Email">
+                        <input type="email" class="form-control" id="" placeholder="Email">
                     </div>
                 </div>
-                <!--<div class="form-group">-->
-                    <!--<div class="col-sm-offset-2 col-sm-10">-->
-                        <!--<div class="checkbox">-->
-                            <!--<label>-->
-                                <!--<input type="checkbox"> Remember me-->
-                            <!--</label>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default">Register</button>
+                        <button type="submit" class="btn btn-default btn-lg">Register</button>
                     </div>
                 </div>
             </form>
