--- a/public/index.html
+++ b/public/index.html
@@ -15,17 +15,19 @@
     <div id="intro">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-8 col-md-4 col-md-offset-7 intro-panel">
+                <div class="intro-panel">
                     <h1>Brittany Chiang</h1>
                     <h2>CS 4550 Spring 2016</h2>
                     <br>
-                    <p>This my homepage for my web development class I took in the spring of 2016 at Northeatsern. By clicking the links below, you can view the code, documentation, and final product of my semester long project.</p>
-                    <ul>
-                        <li><a href="" target="_blank"><i class="fa fa-globe"></i></a><span>OpenShift</span></li>
-                        <li><a href="" target="_blank"><i class="fa fa-github"></i></a><span>Github</span></li>
-                        <li><a href="" target="_blank"><i class="fa fa-file-text-o"></i></a><span>Docs</span></li>
-                        <li><a href="" target="_blank"><i class="fa fa-play-circle"></i></a><span>Demo</span></li>
-                    </ul>
+                    <p>This is my homepage for the web development class at Northeastern in the spring of 2016. By clicking the links below, you can view the code, documentation, final product, and a demo of my semester long project.</p>
+                    <div class="intro-links">
+                        <ul>
+                            <li><a href="https://github.com/bchiang7/WebDevSpring2016" target="_blank"><i class="fa fa-github"></i></a><span>Github</span></li>
+                            <li><a href="" target="_blank"><i class="fa fa-file-text-o"></i></a><span>Docs</span></li>
+                            <li><a href="http://webdevspring2016-chiangbrittany.rhcloud.com/" target="_blank"><i class="fa fa-globe"></i></a><span>OpenShift</span></li>
+                            <li><a href="" target="_blank"><i class="fa fa-play-circle"></i></a><span>Demo</span></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
