add project proposal link

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
                     <h2>CS 4550 Spring 2016</h2>
                     <br>
                     <p>This is my homepage for the web development class at Northeastern in the spring of 2016. By clicking the links below, you can view the code, documentation, final product, and a demo of my semester long project.</p>
+                    <p><a href="https://docs.google.com/document/d/1XkjjbSCREqTijFtL8kI7O6MkCP2f10c7fUhnKJOARVw/edit?usp=sharing" target="_blank" style="color: blue; text-decoration:underline;">Here</a> is my project proposal.</p>
                     <div class="intro-links">
                         <ul>
                             <li><a href="https://github.com/bchiang7/WebDevSpring2016" target="_blank"><i class="fa fa-github"></i></a><span>Github</span></li>
