--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" ng-app="FormBuilderApp">
 
 <head>
     <title>Form Maker</title>
@@ -10,31 +10,46 @@
     <meta name="author" content="">
     <link rel="icon" href="">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/dashboard.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
-</head>
-
-<body ng-controller="MainController">
-
-    <div ng-include="'views/header/header.view.html'"></div>
-
-    <div class="container-fluid">
-        <div class="row">
-            <div ng-include="'views/sidebar/sidebar.view.html'"></div>
-
-            <div ng-view></div>
-        </div>
-    </div>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
+
     <script src="app.js"></script>
     <script src="config.js"></script>
+
+    <script src="views/main/main.controller.js"></script>
+    <script src="views/admin/admin.controller.js"></script>
+    <script src="views/forms/forms.controller.js"></script>
+    <script src="views/forms/fields.controller.js"></script>
+    <script src="views/header/header.controller.js"></script>
+    <script src="views/home/home.controller.js"></script>
+    <script src="views/sidebar/sidebar.controller.js"></script>
+    <script src="views/users/login.controller.js"></script>
+    <script src="views/users/profile.controller.js"></script>
+    <script src="views/users/register.controller.js"></script>
+
+</head>
+
+<body ng-controller="MainController">
+    <div class="container">
+        <div class="row">
+            <ng-include src="views/header/header.view.html"></ng-include>
+        </div>
+        <div class="row">
+            <ng-include src="views/sidebar/sidebar.view.html"></ng-include>
+        </div>
+
+        <div ng-view></div>
+    </div>
+
+
 
 </body>
 
