--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -24,12 +24,15 @@
     <script src="app.js"></script>
     <script src="config.js"></script>
 
-    <script src="views/main/main.controller.js"></script>
+    <script src="services/user.service.client.js"></script>
+    <script src="services/forms.service.client.js"></script>
+
     <script src="views/admin/admin.controller.js"></script>
     <script src="views/forms/forms.controller.js"></script>
     <script src="views/forms/fields.controller.js"></script>
     <script src="views/header/header.controller.js"></script>
     <script src="views/home/home.controller.js"></script>
+    <script src="views/main/main.controller.js"></script>
     <script src="views/sidebar/sidebar.controller.js"></script>
     <script src="views/users/login.controller.js"></script>
     <script src="views/users/profile.controller.js"></script>
@@ -47,8 +50,6 @@
             <div ng-view></div>
         </div>
     </div>
-
-
 
 </body>
 
