project proof of concept

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
                         <ul>
                             <li><a href="https://github.com/bchiang7/WebDevSpring2016" target="_blank"><i class="fa fa-github"></i></a><span>Github</span></li>
                             <li><a href="" target="_blank"><i class="fa fa-file-text-o"></i></a><span>Docs</span></li>
-                            <li><a href="http://webdevspring2016-chiangbrittany.rhcloud.com/" target="_blank"><i class="fa fa-globe"></i></a><span>OpenShift</span></li>
+                            <li><a href="https://docs.google.com/document/d/1XkjjbSCREqTijFtL8kI7O6MkCP2f10c7fUhnKJOARVw/edit?usp=sharing" target="_blank"><i class="fa fa-globe"></i></a><span>OpenShift</span></li>
                             <li><a href="" target="_blank"><i class="fa fa-play-circle"></i></a><span>Demo</span></li>
                         </ul>
                     </div>
