Some progress for server side dev

--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -38,6 +38,8 @@
     <script src="views/users/profile.controller.js"></script>
     <script src="views/users/register.controller.js"></script>
 
+    <script src="../server/services/forms.service.server.js"></script>
+
 </head>
 
 <body ng-controller="MainController">
