assignment 3 content, but nothing works

--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -40,6 +40,8 @@
 
     <script src="../../server/services/forms.service.server.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-sortable/0.13.4/sortable.js"></script>
+
 </head>
 
 <body ng-controller="MainController">
