project mobile menu

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -22,6 +22,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
 
+    <script src="js/project.js"></script>
     <script src="app.js"></script>
     <script src="config.js"></script>
 
@@ -30,15 +31,11 @@
 
     <script src="views/admin/admin.controller.js"></script>
     <script src="views/courses/courses.controller.js"></script>
-    <script src="views/courses/fields.controller.js"></script>
     <script src="views/dashboard/dashboard.controller.js"></script>
     <script src="views/degree/degree.controller.js"></script>
     <script src="views/header/header.controller.js"></script>
     <script src="views/main/main.controller.js"></script>
-    <script src="views/registration/registration.controller.js"></script>
-    <script src="views/schedule/schedule.controller.js"></script>
     <script src="views/sidebar/sidebar.controller.js"></script>
-    <script src="views/studentServices/studentServices.controller.js"></script>
     <script src="views/users/login.controller.js"></script>
     <script src="views/users/profile.controller.js"></script>
     <script src="views/users/register.controller.js"></script>
