--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -35,6 +35,7 @@
     <script src="views/degree/degree.controller.js"></script>
     <script src="views/header/header.controller.js"></script>
     <script src="views/main/main.controller.js"></script>
+    <script src="views/saved/saved.controller.js"></script>
     <script src="views/sidebar/sidebar.controller.js"></script>
     <script src="views/users/login.controller.js"></script>
     <script src="views/users/profile.controller.js"></script>
