more refactoring for server side stuff

--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="CourseApp">
-
 <head>
     <title>CourseSource</title>
     <meta charset="utf-8">
@@ -8,23 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="">
 
+    <link rel="icon" href="">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/dashboard.css" rel="stylesheet">
     <link href="css/project-style.css" rel="stylesheet">
 
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
-
-    <script src="js/project.js"></script>
     <script src="app.js"></script>
     <script src="config.js"></script>
+    <script src="js/project.js"></script>
 
     <script src="services/user.service.client.js"></script>
     <script src="services/course.service.client.js"></script>
@@ -33,27 +29,25 @@
     <script src="views/courses/courses.controller.js"></script>
     <script src="views/dashboard/dashboard.controller.js"></script>
     <script src="views/degree/degree.controller.js"></script>
+    <script src="views/details/details.controller.js"></script>
     <script src="views/header/header.controller.js"></script>
     <script src="views/main/main.controller.js"></script>
     <script src="views/saved/saved.controller.js"></script>
+    <script src="views/search/search.controller.js"></script>
     <script src="views/sidebar/sidebar.controller.js"></script>
-    <script src="views/users/login.controller.js"></script>
-    <script src="views/users/profile.controller.js"></script>
-    <script src="views/users/register.controller.js"></script>
+    <script src="views/login/login.controller.js"></script>
+    <script src="views/profile/profile.controller.js"></script>
+    <script src="views/register/register.controller.js"></script>
 
 </head>
 
 <body ng-controller="MainController">
     <div ng-include="'views/header/header.view.html'"></div>
-
     <div class="container-fluid">
         <div class="row">
             <div ng-include="'views/sidebar/sidebar.view.html'"></div>
-
             <div ng-view></div>
         </div>
     </div>
-
 </body>
-
 </html>
