kind of a project prototype

--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -33,7 +33,7 @@
 
     <script src="views/main/main.controller.js"></script>
     <script src="views/dashboard/dashboard.controller.js"></script>
-    <script src="views/courses/courses.controller.js"></script>
+    <script src="views/courses/course.controller.js"></script>
     <script src="views/details/details.controller.js"></script>
     <script src="views/saved/saved.controller.js"></script>
     <script src="views/search/search.controller.js"></script>
