separated homepage css

--- a/public/index.html
+++ b/public/index.html
@@ -17,15 +17,15 @@
             <div class="row">
                 <div class="intro-panel">
                     <h1>Brittany Chiang</h1>
-                    <h2>CS 4550 Spring 2016</h2>
+                    <h2>CS 4550, Spring 2016</h2>
                     <br>
-                    <p>This is my homepage for the web development class at Northeastern in the spring of 2016. By clicking the links below, you can view the code, documentation, final product, and a demo of my semester long project.</p>
+                    <p>By clicking the links below, you may view the code, documentation, final product, and a demo of my semester long project.</p>
                     <p><a href="https://docs.google.com/document/d/1XkjjbSCREqTijFtL8kI7O6MkCP2f10c7fUhnKJOARVw/edit?usp=sharing" target="_blank" style="color: blue; text-decoration:underline;">Here</a> is my project proposal.</p>
                     <div class="intro-links">
                         <ul>
                             <li><a href="https://github.com/bchiang7/WebDevSpring2016" target="_blank"><i class="fa fa-github"></i></a><span>Github</span></li>
-                            <li><a href="" target="_blank"><i class="fa fa-file-text-o"></i></a><span>Docs</span></li>
-                            <li><a href="https://docs.google.com/document/d/1XkjjbSCREqTijFtL8kI7O6MkCP2f10c7fUhnKJOARVw/edit?usp=sharing" target="_blank"><i class="fa fa-globe"></i></a><span>OpenShift</span></li>
+                            <li><a href="https://docs.google.com/document/d/1XkjjbSCREqTijFtL8kI7O6MkCP2f10c7fUhnKJOARVw/edit?usp=sharing" target="_blank"><i class="fa fa-file-text-o"></i></a><span>Docs</span></li>
+                            <li><a href="http://webdevspring2016-chiangbrittany.rhcloud.com/project/client/#/login" target="_blank"><i class="fa fa-globe"></i></a><span>OpenShift</span></li>
                             <li><a href="" target="_blank"><i class="fa fa-play-circle"></i></a><span>Demo</span></li>
                         </ul>
                     </div>
