--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -12,7 +12,7 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/dashboard.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/assignment-style.css" rel="stylesheet">
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
@@ -25,7 +25,8 @@
     <script src="config.js"></script>
 
     <script src="services/user.service.client.js"></script>
-    <script src="services/forms.service.client.js"></script>
+    <script src="services/form.service.client.js"></script>
+    <script src="services/field.service.client.js"></script>
 
     <script src="views/admin/admin.controller.js"></script>
     <script src="views/forms/forms.controller.js"></script>
