--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -39,9 +39,9 @@
     <script src="views/users/profile.controller.js"></script>
     <script src="views/users/register.controller.js"></script>
 
-    <!-- <script src="../../server/services/form.service.server.js"></script> -->
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-sortable/0.13.4/sortable.js"></script>
+    <script src="views/sortable/ng-sortable.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="views/sortable/ng-sortable.min.css">
 
 </head>
 
