--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -13,21 +13,32 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/dashboard.css" rel="stylesheet">
     <link href="css/assignment-style.css" rel="stylesheet">
+    <link href="views/sortable/ng-sortable.min.css" rel="stylesheet" type="text/css" >
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-sortable/0.13.4/sortable.js"></script>
+    <script src="views/sortable/ng-sortable.min.js"></script>
 
     <script src="app.js"></script>
     <script src="config.js"></script>
 
+    <!-- Services -->
     <script src="services/user.service.client.js"></script>
     <script src="services/form.service.client.js"></script>
     <script src="services/field.service.client.js"></script>
 
+    <!-- Directives -->
+    <!-- <script src="directives/sortable.directive.js"></script> -->
+    <script src="directives/fields-directives.js"></script>
+
+    <!-- Controllers -->
     <script src="views/admin/admin.controller.js"></script>
     <script src="views/forms/forms.controller.js"></script>
     <script src="views/forms/fields.controller.js"></script>
@@ -39,9 +50,7 @@
     <script src="views/users/profile.controller.js"></script>
     <script src="views/users/register.controller.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-sortable/0.13.4/sortable.js"></script>
-    <script src="views/sortable/ng-sortable.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="views/sortable/ng-sortable.min.css">
+
 
 </head>
 
