finally got the damn thing to work

--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -28,6 +28,7 @@
 
     <script src="app.js"></script>
     <script src="config.js"></script>
+    <script src="js/custom.js"></script>
 
     <!-- Services -->
     <script src="services/user.service.client.js"></script>
