trying to make sortable a thing

--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -13,7 +13,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/dashboard.css" rel="stylesheet">
     <link href="css/assignment-style.css" rel="stylesheet">
-    <link href="views/sortable/ng-sortable.min.css" rel="stylesheet" type="text/css" >
+    <!-- <link href="views/sortable/ng-sortable.min.css" rel="stylesheet" type="text/css" > -->
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
@@ -24,20 +24,21 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-sortable/0.13.4/sortable.js"></script>
-    <script src="views/sortable/ng-sortable.min.js"></script>
+
+    <!-- <script src="views/sortable/ng-sortable.min.js"></script> -->
 
     <script src="app.js"></script>
     <script src="config.js"></script>
     <script src="js/custom.js"></script>
+
+    <!-- Directives -->
+    <script src="directives/sortable.directive.js"></script>
 
     <!-- Services -->
     <script src="services/user.service.client.js"></script>
     <script src="services/form.service.client.js"></script>
     <script src="services/field.service.client.js"></script>
 
-    <!-- Directives -->
-    <!-- <script src="directives/sortable.directive.js"></script> -->
-    <script src="directives/fields-directives.js"></script>
 
     <!-- Controllers -->
     <script src="views/admin/admin.controller.js"></script>
