--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -13,8 +13,6 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/dashboard.css" rel="stylesheet">
     <link href="css/assignment-style.css" rel="stylesheet">
-    <!-- <link href="views/sortable/ng-sortable.min.css" rel="stylesheet" type="text/css" > -->
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
@@ -23,9 +21,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-sortable/0.13.4/sortable.js"></script>
-
-    <!-- <script src="views/sortable/ng-sortable.min.js"></script> -->
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-sortable/0.13.4/sortable.js"></script>-->
 
     <script src="app.js"></script>
     <script src="config.js"></script>
