--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -11,6 +11,8 @@
     <link rel="icon" href="">
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+
     <link href="css/dashboard.css" rel="stylesheet">
     <link href="css/assignment-style.css" rel="stylesheet">
 
