--- a/public/index.html
+++ b/public/index.html
@@ -6,37 +6,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Web Development</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="homepage.css" rel="stylesheet">
 </head>
 
-<body class="intro-bg">
-    <div id="intro">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="intro-panel">
-                    <h1>Brittany Chiang</h1>
-                    <h2>CS 4550, Spring 2016</h2>
-                    <br>
-                    <p>By clicking the links below, you may view the code, documentation, final product, and a demo of my semester long project.</p>
-                    <p><a href="https://docs.google.com/document/d/1XkjjbSCREqTijFtL8kI7O6MkCP2f10c7fUhnKJOARVw/edit?usp=sharing" target="_blank" style="color: blue; text-decoration:underline;">Here</a> is my project proposal.</p>
-                    <div class="intro-links">
-                        <ul>
-                            <li><a href="https://github.com/bchiang7/WebDevSpring2016" target="_blank"><i class="fa fa-github"></i></a><span>Github</span></li>
-                            <li><a href="https://docs.google.com/document/d/1XkjjbSCREqTijFtL8kI7O6MkCP2f10c7fUhnKJOARVw/edit?usp=sharing" target="_blank"><i class="fa fa-file-text-o"></i></a><span>Docs</span></li>
-                            <li><a href="http://webdevspring2016-chiangbrittany.rhcloud.com/project/client/#/login" target="_blank"><i class="fa fa-globe"></i></a><span>OpenShift</span></li>
-                            <li><a href="" target="_blank"><i class="fa fa-play-circle"></i></a><span>Demo</span></li>
-                        </ul>
-                    </div>
-                </div>
+<body>
+    <div class="bg-hero"></div>
+    <div class="hero">
+        <div class="hero-content">
+            <h1 class="hero-content-heading fade-in">Brittany Chiang</h1>
+            <img class="headshot fade-in" src="images/headshot.jpg" />
+            <p class="hero-content-blurb fade-in">Welcome to my homepage for CS 4550, Web Development. Below are links to my github repository, the openshift websites for my assignment and project, and the initial documentation for my project.</p>
+            <div class="social-icons fade-in">
+                <li><a class="icon-link" href="https://github.com/bchiang7/WebDevSpring2016" target="_blank"><i class="fa fa-github"></i></a><span class="span-link">Github</span></li>
+                <li><a class="icon-link" href="http://webdevspring2016-chiangbrittany.rhcloud.com/assignment/client/#/home"><i class="fa fa-leanpub"></i></a><span class="span-link">Assignment</span></li>
+                <li><a class="icon-link" href="http://webdevspring2016-chiangbrittany.rhcloud.com/project/client/#/login"><i class="fa fa-lightbulb-o"></i></a><span class="span-link">Project</span></li>
+                <li><a class="icon-link" href="https://docs.google.com/document/d/1XkjjbSCREqTijFtL8kI7O6MkCP2f10c7fUhnKJOARVw/edit?usp=sharing"><i class="fa fa-file-text-o"></i></a><span class="span-link">Documentation</span></li>
             </div>
         </div>
     </div>
 
 
-    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+    <script>
+        $(function() {
+            // $("#link-github").mouseover(function() {
+            //     $("#span-github").animate({
+            //         opacity: "1"
+            //     }, "fast");
+            // });
+            // $("#link-github").mouseout(function() {
+            //     $("#span-github").animate({
+            //         opacity: "0"
+            //     }, "fast");
+            // });
+            //
+            // $("#link-assignment").mouseover(function() {
+            //     $("#span-assignment").animate({
+            //         opacity: "1"
+            //     }, "fast");
+            // });
+            // $("#link-assignment").mouseout(function() {
+            //     $("#span-assignment").animate({
+            //         opacity: "0"
+            //     }, "fast");
+            // });
+            //
+            // $("#link-project").mouseover(function() {
+            //     $("#span-project").animate({
+            //         opacity: "1"
+            //     }, "fast");
+            // });
+            // $("#link-project").mouseout(function() {
+            //     $("#span-project").animate({
+            //         opacity: "0"
+            //     }, "fast");
+            // });
+            //
+            // $("#link-docs").mouseover(function() {
+            //     $("#span-docs").animate({
+            //         opacity: "1"
+            //     }, "fast");
+            // });
+            // $("#link-docs").mouseout(function() {
+            //     $("#span-docs").animate({
+            //         opacity: "0"
+            //     }, "fast");
+            // });
+        });
+    </script>
 
 </body>
 
