touch up home page

--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,13 @@
         <div class="hero-content">
             <h1 class="hero-content-heading fade-in">Brittany Chiang</h1>
             <img class="headshot fade-in" src="images/headshot.jpg" />
-            <p class="hero-content-blurb fade-in">Welcome to my homepage for CS 4550, Web Development. Below are links to my github repository, the openshift websites for my assignment and project, and the initial documentation for my project.</p>
+            <p class="hero-content-blurb fade-in">Welcome to my homepage for CS 4550, Web Development. Below are links to my github repository, openshift website for my assignments, initial documentation for my project, openshift website for my project, and a short demo of my project.</p>
             <div class="social-icons fade-in">
                 <li><a class="icon-link" href="https://github.com/bchiang7/WebDevSpring2016" target="_blank"><i class="fa fa-github"></i></a><span class="span-link">Github</span></li>
                 <li><a class="icon-link" href="http://webdevspring2016-chiangbrittany.rhcloud.com/assignment/client/#/home"><i class="fa fa-leanpub"></i></a><span class="span-link">Assignment</span></li>
+                <li><a class="icon-link" href="https://docs.google.com/document/d/1XkjjbSCREqTijFtL8kI7O6MkCP2f10c7fUhnKJOARVw/edit?usp=sharing"><i class="fa fa-file-text-o"></i></a><span class="span-link">Docs</span></li>
                 <li><a class="icon-link" href="http://webdevspring2016-chiangbrittany.rhcloud.com/project/client/#/login"><i class="fa fa-lightbulb-o"></i></a><span class="span-link">Project</span></li>
-                <li><a class="icon-link" href="https://docs.google.com/document/d/1XkjjbSCREqTijFtL8kI7O6MkCP2f10c7fUhnKJOARVw/edit?usp=sharing"><i class="fa fa-file-text-o"></i></a><span class="span-link">Documentation</span></li>
+                <li><a class="icon-link" href="#"><i class="fa fa-play-circle-o"></i></a><span class="span-link">Demo</span></li>
             </div>
         </div>
     </div>
