pre-adding completed and in progress

--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -35,7 +35,11 @@
     <script src="views/dashboard/dashboard.controller.js"></script>
     <script src="views/courses/course.controller.js"></script>
     <script src="views/details/details.controller.js"></script>
+
     <script src="views/favorited/favorited.controller.js"></script>
+    <script src="views/completed/completed.controller.js"></script>
+    <script src="views/progress/progress.controller.js"></script>
+    
     <script src="views/search/search.controller.js"></script>
     <script src="views/degree/degree.controller.js"></script>
 
