--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="">
     <title>Web Development</title>
 
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
@@ -16,7 +20,7 @@
     <div class="hero">
         <div class="hero-content">
             <h1 class="hero-content-heading fade-in">Brittany Chiang</h1>
-            <img class="headshot fade-in" src="images/headshot.jpg" />
+            <img class="headshot fade-in" src="images/headshot.jpg" style="width: 170px;"/>
             <p class="hero-content-blurb fade-in">Welcome to my homepage for CS 4550, Web Development. Below are links to my github repository, openshift website for my assignments, initial documentation for my project, openshift website for my project, and a short demo of my project.</p>
             <div class="social-icons fade-in">
                 <li><a class="icon-link" href="https://github.com/bchiang7/WebDevSpring2016" target="_blank"><i class="fa fa-github"></i></a><span class="span-link">Github</span></li>
